Footer pattern, and dark repeating pattern assets

--- a/html/mie/assets-icons/output/icons.fallback.css
+++ b/html/mie/assets-icons/output/icons.fallback.css
@@ -32,6 +32,8 @@
 
 .icon-mie-logo { background-image: url('png/mie-logo.png'); background-repeat: no-repeat; }
 
+.icon-pattern-dark { background-image: url('png/pattern-dark.png'); background-repeat: no-repeat; }
+
 .icon-pattern { background-image: url('png/pattern.png'); background-repeat: no-repeat; }
 
 .icon-search { background-image: url('png/search.png'); background-repeat: no-repeat; }
