--- a/html/mie/css/output/global.css
+++ b/html/mie/css/output/global.css
@@ -410,7 +410,14 @@ Performance is dramatically improved because a 9999px box is not drawn. Noticeab
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -861,6 +868,9 @@ pre {
 .swatches span.pattern {
   background-color: #140431; }
 
+.swatches span.pattern-dark {
+  background-color: #140431; }
+
 .swatches span.contrast {
   background-color: #D96E10; }
 
@@ -1088,7 +1098,14 @@ pre {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -1107,21 +1124,29 @@ pre {
   background-color: #D8ADE5; }
 
 .footer__top {
-  background-color: #412773;
+  background-color: #140431;
   padding: 2em 8% 1.5em 8%; }
 
-.footer__top__report-issues, .footer__top__twitter {
+.footer__top__report-issues {
   margin-bottom: 0.5em; }
 
-.footer__top__twitter .btn {
-  padding-left: 0.9em; }
-.footer__top__twitter .icon-footer-twitter {
-  width: 1.5em;
-  height: 1.2em;
-  margin: 0 0.6em 0 0;
-  vertical-align: -0.3em; }
+.footer__top__menu {
+  margin-bottom: 2.4em; }
 
-.footer__top__report-issues span, .footer__top__twitter span, .footer__top__partners span {
+.footer__top__menu a {
+  display: block;
+  color: #ffffff;
+  font-size: 1.2em;
+  margin: 0 0 0.7em 0;
+  border: none; }
+  .footer__top__menu a:before {
+    content: "— "; }
+  .footer__top__menu a:after {
+    content: " »"; }
+  .footer__top__menu a:hover {
+    text-decoration: underline; }
+
+.footer__top__report-issues span, .footer__top__menu span, .footer__top__partners span {
   font-size: 1.25em;
   color: #ffffff;
   font-weight: 400;
@@ -1203,6 +1228,8 @@ footer i {
   .footer__top, .footer__top span {
     text-align: center;
     max-width: 100%; }
+  .footer__top__menu a:before {
+    content: none; }
   .footer__top__partners {
     text-align: center;
     margin-bottom: 1.5em; }
@@ -1223,17 +1250,18 @@ footer i {
 @media only all and (min-width: 45em) {
   .footer__top__report-issues {
     padding-right: 10%;
-    width: 55%; }
-  .footer__top__report-issues, .footer__top__twitter {
-    float: left;
+    width: 60%;
     text-align: center; }
-    .footer__top__report-issues span, .footer__top__twitter span {
+  .footer__top__report-issues, .footer__top__menu {
+    float: right; }
+    .footer__top__report-issues span, .footer__top__menu span {
       text-align: center;
       max-width: 17em;
       margin: 0 auto 1em auto; }
-  .footer__top__twitter {
-    width: 45%; }
-    .footer__top__twitter span {
+  .footer__top__menu {
+    width: 40%;
+    text-align: left; }
+    .footer__top__menu span {
       margin-bottom: 2.1em; }
   .footer__top__partners span {
     margin: 1.2em 0 1.2em 0;
@@ -1248,22 +1276,22 @@ footer i {
 @media only all and (min-width: 71.25em) {
   .footer__top {
     padding: 2em 5% 1.5em 5%; }
-  .footer__top__report-issues span, .footer__top__twitter span, .footer__top__partners span {
+  .footer__top__report-issues span, .footer__top__menu span, .footer__top__partners span {
     text-align: left;
     max-width: 13.25em;
     font-size: 1.2em;
     margin: 0 0 1em 0; }
   .footer__top__report-issues {
-    width: 20%;
-    float: right;
-    text-align: left;
-    padding: 0; }
-  .footer__top__twitter {
     width: 30%;
     float: right;
     text-align: left;
     padding: 0; }
-    .footer__top__twitter span {
+  .footer__top__menu {
+    width: 20%;
+    float: right;
+    text-align: left;
+    padding: 0; }
+    .footer__top__menu span {
       margin-bottom: 2.1em; }
   .footer__top__partners {
     width: 50%;
@@ -1287,7 +1315,14 @@ footer i {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -1485,7 +1520,14 @@ footer i {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -1689,7 +1731,14 @@ footer i {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2109,7 +2158,14 @@ footer i {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2200,7 +2256,14 @@ body {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2329,7 +2392,14 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2508,7 +2578,14 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2613,7 +2690,14 @@ ol ul li:before {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2769,7 +2853,14 @@ ol ul li:before {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2825,7 +2916,14 @@ ol ul li:before {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2909,7 +3007,14 @@ ol.pagination li {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -2979,7 +3084,14 @@ ol.pagination li {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -3127,7 +3239,14 @@ ol.pagination li {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -3286,7 +3405,14 @@ select:-internal-list-box option:checked {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -3318,7 +3444,14 @@ select:-internal-list-box option:checked {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -3352,7 +3485,14 @@ html\:abbr, abbr {
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
