--- a/html/mie/css/output/patterns/0-footer.css
+++ b/html/mie/css/output/patterns/0-footer.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .pattern {
   background: url(../../assets/pattern.png);
   background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
@@ -5,7 +6,14 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern, .icon-pattern-dark {
   background-repeat: repeat; }
 
 .bg--darkest {
@@ -24,21 +32,29 @@
   background-color: #D8ADE5; }
 
 .footer__top {
-  background-color: #412773;
+  background-color: #140431;
   padding: 2em 8% 1.5em 8%; }
 
-.footer__top__report-issues, .footer__top__twitter {
+.footer__top__report-issues {
   margin-bottom: 0.5em; }
 
-.footer__top__twitter .btn {
-  padding-left: 0.9em; }
-.footer__top__twitter .icon-footer-twitter {
-  width: 1.5em;
-  height: 1.2em;
-  margin: 0 0.6em 0 0;
-  vertical-align: -0.3em; }
+.footer__top__menu {
+  margin-bottom: 2.4em; }
 
-.footer__top__report-issues span, .footer__top__twitter span, .footer__top__partners span {
+.footer__top__menu a {
+  display: block;
+  color: #ffffff;
+  font-size: 1.2em;
+  margin: 0 0 0.7em 0;
+  border: none; }
+  .footer__top__menu a:before {
+    content: "— "; }
+  .footer__top__menu a:after {
+    content: " »"; }
+  .footer__top__menu a:hover {
+    text-decoration: underline; }
+
+.footer__top__report-issues span, .footer__top__menu span, .footer__top__partners span {
   font-size: 1.25em;
   color: #ffffff;
   font-weight: 400;
@@ -120,6 +136,8 @@ footer i {
   .footer__top, .footer__top span {
     text-align: center;
     max-width: 100%; }
+  .footer__top__menu a:before {
+    content: none; }
   .footer__top__partners {
     text-align: center;
     margin-bottom: 1.5em; }
@@ -140,17 +158,18 @@ footer i {
 @media only all and (min-width: 45em) {
   .footer__top__report-issues {
     padding-right: 10%;
-    width: 55%; }
-  .footer__top__report-issues, .footer__top__twitter {
-    float: left;
+    width: 60%;
     text-align: center; }
-    .footer__top__report-issues span, .footer__top__twitter span {
+  .footer__top__report-issues, .footer__top__menu {
+    float: right; }
+    .footer__top__report-issues span, .footer__top__menu span {
       text-align: center;
       max-width: 17em;
       margin: 0 auto 1em auto; }
-  .footer__top__twitter {
-    width: 45%; }
-    .footer__top__twitter span {
+  .footer__top__menu {
+    width: 40%;
+    text-align: left; }
+    .footer__top__menu span {
       margin-bottom: 2.1em; }
   .footer__top__partners span {
     margin: 1.2em 0 1.2em 0;
@@ -165,22 +184,22 @@ footer i {
 @media only all and (min-width: 71.25em) {
   .footer__top {
     padding: 2em 5% 1.5em 5%; }
-  .footer__top__report-issues span, .footer__top__twitter span, .footer__top__partners span {
+  .footer__top__report-issues span, .footer__top__menu span, .footer__top__partners span {
     text-align: left;
     max-width: 13.25em;
     font-size: 1.2em;
     margin: 0 0 1em 0; }
   .footer__top__report-issues {
-    width: 20%;
-    float: right;
-    text-align: left;
-    padding: 0; }
-  .footer__top__twitter {
     width: 30%;
     float: right;
     text-align: left;
     padding: 0; }
-    .footer__top__twitter span {
+  .footer__top__menu {
+    width: 20%;
+    float: right;
+    text-align: left;
+    padding: 0; }
+    .footer__top__menu span {
       margin-bottom: 2.1em; }
   .footer__top__partners {
     width: 50%;
