--- a/html/mie/css/sass/_6-guide.scss
+++ b/html/mie/css/sass/_6-guide.scss
@@ -334,6 +334,10 @@ pre {
   background-color: $dark;
 }
 
+.swatches span.pattern-dark {
+  background-color: $dark;
+}
+
 .swatches span.contrast {
   background-color: $contrast;
 }
