--- a/html/mie/css/sass/_4-colours.scss
+++ b/html/mie/css/sass/_4-colours.scss
@@ -35,7 +35,17 @@ $light-pastel: #D8ADE5;
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */
 }
 
-.icon-pattern {
+.pattern-dark {
+  background: url(../../assets/pattern-dark.png);
+  background: url(../../assets/pattern-dark.svg),
+    linear-gradient(transparent, transparent);
+    /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */
+}
+
+.icon-pattern,
+.icon-pattern-dark {
   background-repeat: repeat;
 }
 
