--- a/html/mie/css/output/patterns/03-blockquote.css
+++ b/html/mie/css/output/patterns/03-blockquote.css
@@ -33,9 +33,9 @@
 
 .quote {
   margin: 1.5em 0;
-  border-top: 0.1em solid;
-  border-bottom: 0.1em solid;
-  border-color: #D8ADE5;
+  border-top: 0.08em solid;
+  border-bottom: 0.08em solid;
+  border-color: #6f45c0;
   padding: 1em 1em;
   font-style: italic;
   font-size: 1.4em;
@@ -61,6 +61,42 @@ blockquote.quote__blockquote {
 .quote__caption {
   font-style: italic;
   font-size: 0.8em;
+  color: #140431;
+  margin-top: 0.8em; }
+  .quote__caption:before {
+    content: "— "; }
+
+.quote--pullout {
+  margin: 1.5em 0;
+  border-left: 0.276em solid;
+  border-color: #6381BF;
+  padding: 0.3em 1em 0.2em 1em;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.9em;
+  line-height: 1.3em;
+  color: #8F4F97; }
+
+blockquote.quote__blockquote {
+  margin: 0; }
+
+.quote__blockquote:before {
+  content: '“'; }
+.quote__blockquote:after {
+  content: '”'; }
+.quote__blockquote:before, .quote__blockquote:after {
+  font-size: 1.6em;
+  vertical-align: -0.2em;
+  margin-left: -0.1em;
+  color: #412773; }
+
+.quote em {
+  font-style: normal; }
+
+.quote__caption {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.7em;
   color: #140431;
   margin-top: 0.8em; }
   .quote__caption:before {
