--- a/html/mie/css/sass/patterns/06-content-indexes.scss
+++ b/html/mie/css/sass/patterns/06-content-indexes.scss
@@ -4,7 +4,7 @@
 .list__jump-nav {
   padding: 1em;
   width: 100%;
-  background-color: scale-color($light-pastel, $lightness: 85%);
+  background-color: scale-color($light, $lightness: 85%);
   text-align: center;
   margin: 0 0 2em 0;
 }
@@ -45,15 +45,18 @@
     @include border-radius(1em);
     text-align: center;
     border-bottom: none;
-    background-color: $dark;
+    background-color: $mid;
     color: $white;
     font-weight: 3 00;
   }
-  &:nth-child(2n) a {
-    background-color: scale-color($dark, $lightness: 10%);
+  & a:hover {
+    background-color: scale-color($mid, $lightness: 20%);
   }
-  &:hover a {
-    background-color: $mid;
+  &:nth-child(2n) a {
+    background-color: $mid-bright;
+  }
+  &:nth-child(2n) a:hover {
+	  background-color: scale-color($mid-bright, $lightness: 12%);
   }
   &:before {
     content: none;
