--- a/html/mie/css/output/patterns/06-pagination.css
+++ b/html/mie/css/output/patterns/06-pagination.css
@@ -54,20 +54,21 @@ ol.pagination li {
   font-size: 1.1em;
   font-weight: 500;
   text-align: center;
-  background-color: #140431;
+  background-color: #412773;
   color: #ffffff; }
   .pagination a:hover {
     text-decoration: underline;
-    background-color: #412773; }
+    background-color: #6381BF; }
 
 .pagination__current a {
-  background-color: #412773;
+  background-color: #8F4F97;
   color: #ffffff;
   cursor: not-allowed;
   border: none; }
   .pagination__current a:hover {
     text-decoration: underline;
-    color: #ffffff; }
+    color: #ffffff;
+    background-color: #8F4F97; }
 
 .pagination__previous a, .pagination__next a {
   background-color: #140431;
