--- a/html/mie/css/sass/patterns/06-pagination.scss
+++ b/html/mie/css/sass/patterns/06-pagination.scss
@@ -30,22 +30,23 @@ ol.pagination li {
   font-size: 1.1em;
   font-weight: 500;
   text-align: center;
-  background-color: $dark;
+  background-color: $mid;
   color: $white;
   &:hover {
     text-decoration: underline;
-    background-color: $mid;
+    background-color: $contrast-alt;
   }
 }
 
 .pagination__current a {
-  background-color: $mid;
+  background-color: $mid-bright;
   color: $white;
   cursor: not-allowed;
   border: none;
   &:hover {
     text-decoration: underline;
     color: $white;
+    background-color: $mid-bright;
   }
 }
 
