--- a/html/mie/css/output/patterns/06-subnavigation.css
+++ b/html/mie/css/output/patterns/06-subnavigation.css
@@ -51,7 +51,7 @@
     border-color: #140431;
     border-bottom: 0.1em solid; }
   .subnav .subnav__item ul li a, .subnav .subnav__item.subnav__item--sub-parent ul li a {
-    color: #B088BC; }
+    color: #9b3fa7; }
   .subnav .subnav__item ul li a.active, .subnav .subnav__item.subnav__item--sub-parent ul li a.active {
     color: #140431; }
 
