--- a/html/mie/css/output/global.css
+++ b/html/mie/css/output/global.css
@@ -3098,7 +3098,7 @@ ol.pagination li {
     border-color: #140431;
     border-bottom: 0.1em solid; }
   .subnav .subnav__item ul li a, .subnav .subnav__item.subnav__item--sub-parent ul li a {
-    color: #B088BC; }
+    color: #9b3fa7; }
   .subnav .subnav__item ul li a.active, .subnav .subnav__item.subnav__item--sub-parent ul li a.active {
     color: #140431; }
 
