--- a/html/mie/css/output/global.css
+++ b/html/mie/css/output/global.css
@@ -3223,6 +3223,8 @@ ol.pagination li {
     box-shadow: 0 0.5em 0.5em 0em #ffffff; }
   .js-tabs .tabs .js-tabs-list li, .js-tabs .tabs.js-tab-ui .js-tabs-list [aria-selected=true] {
     border-right: none; }
+  .js-tabs .tabs [role=tablist] {
+    background-color: #a1b3d9; }
   .js-tabs .tabs [role=tab] {
     display: inline-block;
     width: 25%;
