--- a/html/mie/css/output/patterns/08-feedback.css
+++ b/html/mie/css/output/patterns/08-feedback.css
@@ -32,7 +32,7 @@
 
 .feedback {
   background-color: #d0d9ec;
-  border-bottom: 0.2em solid #728dc5;
+  border-bottom: 0.2em solid #a1b3d8;
   font-weight: 500;
   padding: 0.8em 1.4em;
   margin: 0 0 1.5em 0; }
