--- a/html/mie/css/output/patterns/13-responsive-tables.css
+++ b/html/mie/css/output/patterns/13-responsive-tables.css
@@ -82,9 +82,9 @@ tr {
   margin: 0 0 1.5em 0;
   width: 100%;
   font-size: 1.1em;
-  background-color: #ead4f1;
+  background-color: #e8ecf5;
   border-top: 0.2em solid #140431;
-  border-bottom: 0.2em solid #D8ADE5;
+  border-bottom: 0.2em solid #c1cde5;
   padding: 1em; }
 
 td {
@@ -102,7 +102,7 @@ by side rather than stacked */
     margin: 0 0 2em 0;
     border-style: none;
     border-top-width: 0;
-    border-bottom: 0.2em solid #D8ADE5; }
+    border-bottom: 0.2em solid #c1cde5; }
   /* Labeling
    * Hide the mobile labels */
   th[data-title]:before, td[data-title]:before {
