--- a/html/mie/css/output/global.css
+++ b/html/mie/css/output/global.css
@@ -847,6 +847,18 @@ pre {
 .swatches span.mid-bright {
   background-color: #8F4F97; }
 
+.swatches span.section-alpha {
+  background-color: #00855B; }
+
+.swatches span.section-beta {
+  background-color: #094085; }
+
+.swatches span.section-gamma {
+  background-color: #0080A6; }
+
+.swatches span.section-delta {
+  background-color: #760B5E; }
+
 .swatches span.link-text {
   background-color: #5F39AC; }
 
@@ -899,7 +911,7 @@ pre {
   background-color: #666; }
 
 .swatches li b {
-  font-size: 0.8em;
+  font-size: 0.65em;
   font-weight: 300; }
 
 .swatches li span {
