--- a/html/mie/css/output/global.css
+++ b/html/mie/css/output/global.css
@@ -851,7 +851,7 @@ pre {
   background-color: #00855B; }
 
 .swatches span.section-beta {
-  background-color: #094085; }
+  background-color: #0456BE; }
 
 .swatches span.section-gamma {
   background-color: #0080A6; }
