--- a/html/mie/css/sass/_4-colours.scss
+++ b/html/mie/css/sass/_4-colours.scss
@@ -14,11 +14,11 @@ $darkest: #222121;
 
 $section-alpha: #00855B;
 
-$section-beta: #094085;//#215C59;
+$section-beta: #0456BE;
 
 $section-gamma: #0080A6;
 
-$section-delta: #760B5E;//#A60080;
+$section-delta: #760B5E;
 
 
 //// Text-specific colours
